102 old question added

--- a/views/dca102onlineclasschapter2.ejs
+++ b/views/dca102onlineclasschapter2.ejs
@@ -296,59 +296,73 @@ the category are as follows.</p>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Software is divided into ________ types => 2
 </p><p>
-2. 
+2. DOS is a _______ OS => Character user interface
 </p><p>
-3. 
+3. OS which allows only one user to work in a computer at a time is known as => Single user OS
 </p><p>
-4. 
+4. MS Windows is a => Multi Tasking
 </p><p>
-5. 
+5. Example of single tasking OS is => DOS
 </p><p>
-6. 
+6. LINUX is a => LINUX
 </p><p>
-7. 
+7. DOS is single user OS which is developed in => 1980's
 </p><p>
-8. 
+8. Which of the following is Multi User Operating System => Linux
 </p><p>
-9. 
+9. What type of operating system support execution of more than one job at a time => Multi-tasking OS
 </p><p>
-10. 
+10. MMX stands for => Multimedia Extension
 </p><p>
-11. 
+11. Utility Software package in Windows 7 does not include => Anti-virus
 </p><p>
-12. 
+12. To speed up and gain efficiency of a hard disk access time we use => Disk Defragment tools
 </p><p>
-13. 
+13. Which is not Microsoft Windows job => Uninterrupted power management
 </p><p>
-14. 
+14. To enhance efficiency of a computer system and gain access of file and folder we use => Disk Defragment Tools
 </p><p>
-15. 
+15. Utility Software package in Windows7 includes => Notepad
 </p><p>
-16. 
+16. Which of the following is not Windows utility software => MS Office <br>
+{ 1) MS Office 2) Notepad 3) Paint 4) Wordpad }
 </p><p>
-17. 
+17. If we want to run a specific Program every time our Windows based PC startup we can use => Task Scheduler Utility
 </p><p>
-18. 
+18. Which of the following is not Windows Utility Software? => Adobe <br>
+{ a) Notepad c) Paint b) Adobe d) Wordpad }
 </p><p>
-19. 
+19. The full form of GUI is => Graphical User Interface
 </p><p>
-20. 
+20. Full form of ICF is => Internet Connection Firewall
 </p><p>
-21. 
+21. Consolidating fragmental file and folder on your hard disk is called => Defragment
 </p><p>
-22. 
+22. Notepad can open file with extension => TXT
 </p><p>
-23. 
+23. Recycle bin provides temporary storage for files and folders that were deleted.
 </p><p>
-24. 
+24. Application program need to interact with the operating system for using hardware resources.
 </p><p>
-25. 
+25. Basic file and folder operation are selecting, creating, naming and opening.
 </p><p>
-26. 
+26. CPU scheduling 'stack' is of _______ => First in first out
 </p><p>
-27. 
+27. On MS-DOS, file names are case-insensitive and limited to eight characters, plus optionally a period and three more characters.
+</p><p>
+28. What is the default size limitation of MS DOS file name:? => 8,3
+</p><p>
+29. DLL => Dynamic Linked Library
+</p><p>
+30. CRT => Cathode Ray Tube
+</p><p>
+31. PIXEL => Picture Element
+</p><p>
+32. Essential windows tool are located in => Accessories
+
+33. 
 </p>
 
              
