--- a/views/dca102onlineclasschapter3.ejs
+++ b/views/dca102onlineclasschapter3.ejs
@@ -207,59 +207,36 @@ and the latest in the series is  Windows  10  (July  29, 2015).
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. With windows XP, you can make network files available offline
 </p><p>
-2. 
+2. Windows 98 was launched => September 1998
 </p><p>
-3. 
+3. Which of the following is not system icon in Windows 7 => Desktop <br>
+{ a) My Computer c) My Network Place b) My Document d) Desktop }
 </p><p>
-4. 
+4. In which year Microsoft Windows 3.0 introduced => 1990
 </p><p>
-5. 
+5. Which of the following is world's largest selling OS for PC => Microsoft Windows
 </p><p>
-6. 
+6. Windows 8 is a (an) => Operating System
 </p><p>
-7. 
+7. In which year Microsoft start working on Windows => 1983
 </p><p>
-8. 
+8. Which of the following is not Microsoft windows version => Windows Live <br>
+{ 1) Windows 3.0 2) Windows 98 3) Windows XP 4) Windows Live }
 </p><p>
-9. 
+9. What is the main function of Active Movie in Windows 98 => Media-Streaming
 </p><p>
-10. 
+10. In windows XP a default location of newly created document is => My Document
 </p><p>
-11. 
+11. Taskbar in Windows XP include => All of the above <br>
+{ 1) Start menu Button 2) Toolbar 3) Notification Area 4) All of the above }
 </p><p>
-12. 
+12. Which element of Windows XP display name of the program or document => Title Bar
 </p><p>
-13. 
+13. The final version of first Microsoft Windows was released in the year => 1985
 </p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+14. Windows 3.0 was introduced in the year => 1990
 </p>
 
              
