--- a/views/dca102onlineclasschapter4.ejs
+++ b/views/dca102onlineclasschapter4.ejs
@@ -239,59 +239,48 @@ iii) On the extreme right is the notification area.
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. There are 2 type of icon in the desktop they are => System Icon and shortcut icon
 </p><p>
-2. 
+2. In the element of Windows 7 the four edge that define the perimeter of windows are known as => Border
 </p><p>
-3. 
+3. Which menu display an Application Program menu in Windows 7 => All program
 </p><p>
-4. 
+4. Which of the following is part of start menu in windows 7 => Search <br>
+{ a) MS Paint c) Search b) Disk management d) None of the above }
 </p><p>
-5. 
+5. The taskbar sits at ________ of the desktop => Bottom of the window
 </p><p>
-6. 
+6. A pictorial representation of application, file command or a tool is called => icon
 </p><p>
-7. 
+7. What are icons? => Pictures
 </p><p>
-8. 
+8. Pictorial representation of an item/program is called => Icon
 </p><p>
-9. 
+9. To open any object in a windows explorer or folder we can => Double click on its icon
 </p><p>
-10. 
+10. When a folder is closed in Windows 7, all we see is => Name and icon of Folder
 </p><p>
-11. 
+11. Which of the following taskbar elements are displayed in the center portion of a taskbar => Task button
 </p><p>
-12. 
+12. The taskbar is at the ________ of the desktop => Bottom
 </p><p>
-13. 
+13. Taskbar in Windows XP include => All of the above <br>
+{ 1) Start menu Button 2) Toolbar 3) Notification Area 4) All of the above }
 </p><p>
-14. 
+14. Which of the following windows element is located at the left end of a taskbar in windows 7 => Start button
 </p><p>
-15. 
+15. When a window in Windows XP is not a long enough to display its content we use => Scrollbar
 </p><p>
-16. 
+16. Text Box in Windows XP are also known as => Edit box
 </p><p>
-17. 
+17. Option button is also called => Radio button
 </p><p>
-18. 
+18. The function key ________ opens Save AS dialogue box in an Application Progam => F12
 </p><p>
-19. 
+19. Windows OS communicates with the user using => All of the above <br>
+{ 1) Radio buttons 2) Dialog boxes 3) Check boxes 4) All of the above }
 </p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+20. Turn off Dialog Box in Windows XP does not include =>  Power Saver Mode
 </p>
 
                       </div>
