--- a/views/dca102onlineclasschapter5.ejs
+++ b/views/dca102onlineclasschapter5.ejs
@@ -232,10 +232,7 @@ Copy from the shortcut menu that appears.<br>
 3.	Open the folder where you want the copy of the file.<br>
 4.	On the Edit menu click Paste. Alternately, you can again right-click and choose Paste in the shortcut menu that appears.<br>
 </p>
-
 <p><code>Moving a File or Folder:</code> One easy way to move a file is using a method called drag and drop.</p>
-
-
 <p>
 <code>To delete a computer file or folder:</code><br>
 1.	Right-click the file or folder that you want to delete, and then choose Delete.<br>
@@ -244,59 +241,60 @@ Copy from the shortcut menu that appears.<br>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. The deleted file from the hard disk are contain in => Recycle bin
 </p><p>
-2. 
+2. Filename is of two parts, they are => Primary file name, extension
 </p><p>
-3. 
+3. File name extension is given by => System
 </p><p>
-4. 
+4. File is a any collection of related information that is given a name and stored on a disk so that it can be read/write whenever required
 </p><p>
-5. 
+5. BAT => Batch File
 </p><p>
-6. 
+6. In window, the fundamental device for managing file is a => Folder
 </p><p>
-7. 
+7. To rename file or folder, press ________ key => F2
 </p><p>
-8. 
+8. The deleted file from the Hard Disk are contained in => Recycle Bin
 </p><p>
-9. 
+9. The default folder where all installed software are put into is => Program files
 </p><p>
-10. 
+10. The fundamental file management tool in Windows 7 is => Folder
 </p><p>
-11. 
+11. To free up space on a hard drive by removing temporary file we can do => Disk Cleanup
 </p><p>
-12. 
+12. File editing menu are found in ________ menu => Edit
 </p><p>
-13. 
+13. The primary file name is given by the => The User
 </p><p>
-14. 
+14. A ________ + delete key combination delete file permanently => shift
 </p><p>
-15. 
+15. Which key combination delete file permanently after confirmation? => Shift
 </p><p>
-16. 
+16. File name extension has ________ characters => 3
 </p><p>
-17. 
+17. A file can contain any kind of information like => All of the above <br>
+{ 1) Programs 2) Images 3) Documents 4) All of the above }
 </p><p>
-18. 
+18. The wildcard in *.exe represents of executable file => All primary file name <br>
+Note: <em> Wildcard character * hi a hawrrawp vaiin / a hawrrawp zawng zawngin tihna a ni. </em>
 </p><p>
-19. 
+19. . Ctrl + O is use to => Open an existing file.
 </p><p>
-20. 
+20. Notepad can open files with the extension => such as batch files, INI files, and log files.
 </p><p>
-21. 
+21. To rename a file in Windows 7 we press => F2
 </p><p>
-22. 
+22. Which of the following is among the correct step while creating new file? => Right Click Mouse Inside a folder <br>
+{ a) Press Alt+F4 c) Hold Enter b) Left Click Mouse d) Right Click Mouse Inside a folder }
 </p><p>
-23. 
+23. The fundamental file management tool in Windows 7 is => Folder
 </p><p>
-24. 
+24. A collection of information which is given a name and stores in a Disk is called => File
 </p><p>
-25. 
+25. A file name has two parts, which are => Primary and secondary
 </p><p>
-26. 
-</p><p>
-27. 
+26. FAT =>  File Allocation Table
 </p>
 
 
