--- a/views/dca102onlineclasschapter6.ejs
+++ b/views/dca102onlineclasschapter6.ejs
@@ -299,105 +299,77 @@
     <td class="fst-italic">taskmgr</td>
     
   </tr>
-  
-  
-  <tr>
-    
-    <td>Log Off Windows</td>
-    
-    <td class="fst-italic">logoff</td>
-    
-  </tr>
-  
-  
-  <tr>
-    
-    <td>Device Manager</td>
-    
-    <td class="fst-italic">devmgmt.msc</td>
-    
-  </tr>
-  
-  <tr>
-    
-    <td>Temporary Folder</td>
-    
-    <td class="fst-italic">	%temp%</td>
-    
-  </tr>
-  
 
   </tbody>
   
 </table>
  </p>
- 
  <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. To Open Calculator: Click Start button, Choose all programs, highlight Accessories and then choose calculator.
 </p><p>
-2. 
+2. Which menu display an Application Program menu Windows 7 => All programs
 </p><p>
-3. 
+3. To use Calculator in Windows 7 we click Start button, choose all programs and then we highlight => Accessories
 </p><p>
-4. 
+4. Which start menu allow us to change date and time => Control Panel <br>
+{ a) My Recent Document c) Run b) Control Panel d) Search }
 </p><p>
-5. 
+5. Which one of the following contain many application you can run => All programs
 </p><p>
-6. 
+6. In windows 7 a default location of newly created document is => My Document
 </p><p>
-7. 
+7. Control panel allows you to => Install software & Change different setting
 </p><p>
-8. 
+8. Control panel in Windows 7 include setting of => All of the above <br>
+{ a) Date & Time c) Password b) Sound d) All of the above }
 </p><p>
-9. 
+9. Which start menu allow us to change date and time => Control panel
 </p><p>
-10. 
+10. Example of peripheral device are => All of the above <br>
+{ 1) Monitor 2) Printer 3) Keyboard 4) All of the above }
 </p><p>
-11. 
+11. Amongst computer peripherals which one doesn't need H/W driver? => None of the above <br>
+{ 1) Printer 2) Mouse 3) Scanner 4) None of the above }
 </p><p>
-12. 
+12. The function key ________ open help window in windows OS => F1
 </p><p>
-13. 
+13. Which of the following Windows 7 features helps in connecting offices
+network computer even if the computer does not have internet connection => LAN
 </p><p>
-14. 
+14. Which is not Microsoft windows job => Uninterrupted Power Management
 </p><p>
-15. 
+15. Full form of OEM is => Original Equipment Manufacturer
 </p><p>
-16. 
+16. When we click on start button of Windows 7 the => Start Menu appear
 </p><p>
-17. 
+17. Which Windows7 start menu allow us to run any program just by typing its name and location => Run
 </p><p>
-18. 
+18. Run box allow you to run an program by typing name and location of a program
 </p><p>
-19. 
+19. To open Calculator from windows run box you type => Calc
 </p><p>
-20. 
+20. If we want to run a specific Program every time our Windows based PC startup we can use => Task Scheduler Utility
 </p><p>
-21. 
+21. Calculator provided in windows can operate in two option namely => Standard and Scientific
 </p><p>
-22. 
+22. A notepad is useful for => Editing textual data
 </p><p>
-23. 
+23. To prepare our computer to be used by someone else for logging in we use => Log off
 </p><p>
-24. 
+24. When a computer is first turned on or restarted, a special type of absolute loader called ________ is executed => bootstrap loader
 </p><p>
-25. 
+25. When a computer is turned on, it conducts a series of self-diagnostic test called => Power on self test
 </p><p>
-26. 
-</p><p>
-27. 
+26. Paging is a function of memory management where a computer will store and retrieve data from a device's secondary storage to the primary storage.
 </p>
-
 
                       </div>
                   
                   </div>
                 
                 </div>  <!--end of text definition-->
-                
-   
                 
                 <div class="accordion-item">
                  
