--- a/views/dca102onlineclasschapter7.ejs
+++ b/views/dca102onlineclasschapter7.ejs
@@ -219,59 +219,33 @@ A shortcut is a pointer to an object, and not the object itself.</p>
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Shortcut icon are the icon with =>  Small arrow in the lower left corner
 </p><p>
-2. 
+2. There are 2 type of icon in the desktop they are => System Icon and shortcut icon
 </p><p>
-3. 
+3. The shortcut icon once created can be renamed in this way => Both a & b <br>
+{ a) Right click, click rename, type new name b) Click two times, name is highlight, type new name c) Only B d) Both a & b
 </p><p>
-4. 
+4. The shortcut has extension => None
 </p><p>
-5. 
+5. A shortcut in Windows 7 can be created by using the create shortcut wizard or by using => Copy and paste
 </p><p>
-6. 
+6. The first step to create a shortcut using Shortcut Wizard is => Right Click on a file
 </p><p>
-7. 
+7. Shortcut icon contains an ________ mark => arrow
 </p><p>
-8. 
+8. Which of the following statement is true in respect to shortcut => All of the above statement is true <br>
+ { a) A shortcut is a small file which link to Document 
+b) A shortcut is a small file which link to Program <br>
+c) A shortcut is a small file which link to Folder 
+d) All of the above statement is true }
 </p><p>
-9. 
+9. The correct step to delete a shortcut is => Select the icon and press delete
 </p><p>
-10. 
+10. In windows 7 system a shortcut icon has an arrow in the => Lower left corner of Icon
 </p><p>
-11. 
-</p><p>
-12. 
-</p><p>
-13. 
-</p><p>
-14. 
-</p><p>
-15. 
-</p><p>
-16. 
-</p><p>
-17. 
-</p><p>
-18. 
-</p><p>
-19. 
-</p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+11. A shortcut can be located => All of the above <br>
+ { a) In Desktop only c) In the Taskbar b) Anywhere on local disk d) All of the above }
 </p>
 
 
