--- a/views/dca102onlineclasschapter8.ejs
+++ b/views/dca102onlineclasschapter8.ejs
@@ -265,59 +265,57 @@ Entertainment:</code> The entertainment tools, such as Sound Recorder, volume Co
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. Calculator provided in windows can operate in two option namely =>  Standard and Scientific
 </p><p>
-2. 
+2. To Open Calculator: Click Start button, Choose all programs, high
+light Accessories and then choose calculator.
 </p><p>
-3. 
+3. To open Calculator from windows run box you type => Calc
 </p><p>
-4. 
+4. To use Calculator in Windows 7 we click Start button, choose all
+programs and then we highlight => Accessories
 </p><p>
-5. 
+5. Notepad can open file with extension => .txt
 </p><p>
-6. 
+6. Utility Software package in Windows7 includes => Notepad
 </p><p>
-7. 
+7. A notepad is useful for => Editing textual data
 </p><p>
-8. 
+8. The default software package to draw picture in Windows 7 is => Paint
 </p><p>
-9. 
+9. Word processor that comes with window OS is => Wordpad
 </p><p>
-10. 
+10. Image processor that comes with windows operating system is => MS Paint
 </p><p>
-11. 
+11. The default software package to draw picture in Windows 7 is => Paint
 </p><p>
-12. 
+12. Word Processor that comes with windows Operating System is => Wordpad
 </p><p>
-13. 
+13. To enhance efficiency of a computer system and gain access of file and folder we use => Disk Defragment Tools
 </p><p>
-14. 
+14. ________ consolidates fragmented files and folders on your computer's hard disk => Disk Defragmenter
 </p><p>
-15. 
+15. PPTP stands for => Point to Point Tunneling Protocol
 </p><p>
-16. 
+16. Which key combination close an active window? => Alt + F4
 </p><p>
-17. 
+17. To speed up and gain efficiency of a hard disk access time we use => Disk Defragment tools
 </p><p>
-18. 
+18. Control panel allows you to => Install software & Change different setting
 </p><p>
-19. 
+19. Essential windows tool are located in => Accessories
 </p><p>
-20. 
+20. Control panel in Windows 7 include setting of => Date & Time, Password, Sound etc.
 </p><p>
-21. 
+21. Which start menu allow us to change date and time => Control Panel
 </p><p>
-22. 
+22. Intra-System communication occurs => Within a single computer
 </p><p>
-23. 
+23. MMX stands for => Multimedia Extension
 </p><p>
-24. 
+24. In process scheduling stack is also known as => FIFO
 </p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+25. AGP stands fo => Accelerated Graphic Port
 </p>
 
 
