--- a/views/dca102onlineclasschapter9.ejs
+++ b/views/dca102onlineclasschapter9.ejs
@@ -362,59 +362,48 @@ The most common MS-DOS internal command is listed below:-
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. What is the command to create a new directory in MSDOS => MD
 </p><p>
-2. 
+2. COMMAND.COM is the default command-line interpreter for MS-DOS, Windows 95-98, Windows 98SE and Windows Me.
 </p><p>
-3. 
+3. The command RD or Rmdir => Remove the directory
 </p><p>
-4. 
+4. DOS command divided into ________ commands  => 2
 </p><p>
-5. 
+5. ________ is one of the main parts of DOS => Command.com
 </p><p>
-6. 
+6. The command tree displays => The directories in the form of Tree
 </p><p>
-7. 
+7. DOS Command 'date' shows => Date only
 </p><p>
-8. 
+8. DOS command format for COPY is => copy [source][destination]
 </p><p>
-9. 
+9. What is the command to erase a file from a disk? => del
 </p><p>
-10. 
+10. To search a file, which command is use in MS DOS? => DIR /S
 </p><p>
-11. 
+11. What command is use to list directory in page wise? => DIR /P
 </p><p>
-12. 
+12. In DOS, listing of file hierarchically is done using which of the commands => TREE
 </p><p>
-13. 
+13. DIR, COPY, MD, CD, CLS, TIME are => Internal command
 </p><p>
-14. 
+14. - s Command is use to => Turn off the system attribute
 </p><p>
-15. 
+15. A '?' Wild-card character represents => Any character with special symbol
 </p><p>
-16. 
+16. Which one from the list is an external command of DOS? => mem <br>
+{ 1) Del 2) Date 3) Mem 4) type }
 </p><p>
-17. 
+17. DOS command to change active drive i.e from Drive C to Drive A we use => C:\>A:
 </p><p>
-18. 
+18. The DOS command C:\> indicate the user is => Currently working on sub folder of drive c drive
 </p><p>
-19. 
+19. When Booting an MS-DOS a program which is used to load the OS is stored in => ROM-BIOS
 </p><p>
-20. 
+20. Example of character user interface is MSDOS
 </p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+21. DOS file system always begin with a directory called as => Root
 </p>
                         
                         
