--- a/views/dca102onlineclasschapter1.ejs
+++ b/views/dca102onlineclasschapter1.ejs
@@ -153,10 +153,9 @@
                            
                             Computer Operating System chi hrang hrang a awm a, chungte chu:- Microsoft Windows te, Linux te, UNIX te leh Boss te an ni. </p>
                            
-                           <p>Operating system hian computer tan hna (management) a thawk a, a tel lo chuan engmah a khawih theih loh va, computer
-                           pawh a nung thei lo a ni. 
+                           <p>Operating system hian computer tan hna (management) a thawk a, a tangkai em em a; 
                            File process tu, security lo tifeltu, computer part hrang hrang lo manage tu, memory lo manage tu etc., a ni a. 
-                           A hna thawh hi a pawimawh em em a ni.
+                           A hna thawh hi a pawimawh em em bawk a ni.
                            </p>
                       
                       </div>
@@ -254,59 +253,47 @@ utility programs and other software packages to various users working on the com
 <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. A pre-coded program to perform over all set of instruction is => Operating System
 </p><p>
-2. 
+2. Word Processor that comes with windows Operating System is => Wordpad
 </p><p>
-3. 
+3. Process scheduling is performed by => Operating System
 </p><p>
-4. 
+4. Early operating system that were designed with little concern about structure are referred to as => Monolithic OS
 </p><p>
-5. 
+5. Application program need to interact with the operating system for using hardware resources.
 </p><p>
-6. 
+6. The operating system is primarily concerned with allocating and deallocating computer resources to => one or more jobs
 </p><p>
-7. 
+7. ________ is responsible for controlling and directing process => Operating Syste
 </p><p>
-8. 
+8. DOS => Disk Operating System
 </p><p>
-9. 
+9. The full form of MS-DOS is => Microsoft Disk operating System
 </p><p>
-10. 
+10. A software program that control internal activities in a computer is called => Operating System
 </p><p>
-11. 
+11. Which of the following is Multi User Operating System => Linux
 </p><p>
-12. 
+12. One of the primary function of the Operating System is to provide interface between the user and the => Hardware
 </p><p>
-13. 
+13. Just after a PC is switch on which of the following program is loaded first => Operating System
 </p><p>
-14. 
+14. Which of the following is not the main function of Operating System => Temperature Management <br>
+{ 1) Input/ Output Management 2) RAM Management 3) Temperature Management 4) Task management }
 </p><p>
-15. 
+15. Operating System is a => Software program
 </p><p>
-16. 
+16. The primary function of Operating System is => 
 </p><p>
-17. 
+17. The most commonly used Operating System is => Microsoft Windows
 </p><p>
-18. 
+18. Which of the following is not the function of Operating System? => Virus Removal <br> 
+{ a) Processor management c) Virus Removal b) Input/Output management d) Scheduling }
 </p><p>
-19. 
+19. A computer Operating System provides => User interface.
 </p><p>
-20. 
-</p><p>
-21. 
-</p><p>
-22. 
-</p><p>
-23. 
-</p><p>
-24. 
-</p><p>
-25. 
-</p><p>
-26. 
-</p><p>
-27. 
+20. A program used to detect overall system malfunction is system diagnostic.
 </p>
 
              
