--- a/views/dca102onlineclasschapter10.ejs
+++ b/views/dca102onlineclasschapter10.ejs
@@ -233,59 +233,76 @@ or graphical user interface (GUI). It is named a shell because it is the outermo
  <p>
   <b>OLD QUESTION:</b>
 </p><p>
-1. 
+1. The wildcard in <em> *.exe</em>  represents of executable file => All primary file name
 </p><p>
-2. 
+2. In process scheduling stack is also known as => FIFO
 </p><p>
-3. 
+3. BPS => Bits per second
 </p><p>
-4. 
+4. ASCII => American Standard code for Information Interchange
 </p><p>
-5. 
+5. To switch between two or more opened windows => ALT + TAB
 </p><p>
-6. 
+6. When a computer is switch on a program automatically run and load
+the OS then the computer is ready to be used, this process is called => Booting
 </p><p>
-7. 
+7. To ensure have the latest version of windows Microsoft introduce a feature a called => Windows System update
 </p><p>
-8. 
+8. When we click on start button of Windows 7 thE => Start Menu appear
 </p><p>
-9. 
+9. The default web browser in Microsoft Windows 7 is => Internet Explorer
 </p><p>
-10. 
+10. After the computer is switch ON the OS is loaded into Computer's => Main Memory
 </p><p>
-11. 
+11. A computer Operating System provides => User Interface
 </p><p>
-12. 
+12. Option button is also called => Radio Button
 </p><p>
-13. 
+13. What is the full form of PPP => Point to Point Protocol
 </p><p>
-14. 
+14. Example of peripheral device are => All of the above <br> 
+{ 1) Monitor 2) Keyboard 3) Printer 4) All of the above }
 </p><p>
-15. 
+15. An illusion of extremely large main memory is called => Virtual memory
 </p><p>
-16. 
+16. The default folder where all installed software are put into is => Program files
 </p><p>
-17. 
+17. Area occupied by each job residing simultaneously in the main memory is known as a => Memory partition
 </p><p>
-18. 
+18. A binary number system has ________ digits => 2
 </p><p>
-19. 
+19. CRT => Cathode Ray Tube
 </p><p>
-20. 
+20. DLL => Dynamic Linked Library
 </p><p>
-21. 
+21. A folder 'A' is invisible folder 'B', then folder 'A' is => A folder is subfolder of B
 </p><p>
-22. 
+22. BAT => Batch File
 </p><p>
-23. 
+23. +R => Read Only
 </p><p>
-24. 
+24. Volatile memory is _______ memory => primary
 </p><p>
-25. 
+25. Which of the following is not Windows Utility Software? => Adobe <br>
+{ a) Notepad c) Paint b) Adobe d) Wordpad }
 </p><p>
-26. 
+26. A square shape button containing an X which is located at the right edge of the title bar in Windows 7 is => Close button
 </p><p>
-27. 
+27. To free up space on a hard drive by removing temporary file we can do => Disk cleanup
+</p><p>
+28. The full form of DMA is => Direct memory access
+</p><p>
+29. If the user is currently working on a local hard drive in DOS environment, the screen will prompt => C:\>
+</p><p>
+30. Which among the following is not taskbar elements of Windows 7 => Speed meter <br>
+{ a) Task button b) Toolbar c) Start button d) Speed meter }
+</p><p>
+31. Which of the following is among the content of start menu in Windows 7 => All programs <br>
+{ a) Decipher b) Save c) Wi-fi d) All programs }
+</p><p>
+32. To select all the items in a folder we click the edit menu and press => Ctrl + A
+</p><p>
+33. Basic file and folder operations in Windows 7 are => Selecting, Creating, Naming, Opening
 </p>
 
 
